# mychain

./: .gitignore  Makefile  config.yml  go.mod  go.sum  localdev.md  readme.md  run-contracts.md
app/: ante.go  app.go  post.go  simulation_test.go
app/utils/: utils.go
client/: .env  .eslintignore  .eslintrc.json  .prettierignore  .ts-ignore  README.md  crypto-test.js  package-lock.json  package.json  tsconfig.eslint.json  tsconfig.json
client/codegen/: SocialRecovery.client.ts  SocialRecovery.types.ts
client/components/: abstr.tsx  features.tsx  types.tsx  wallet.tsx
client/config/: accounts.ts  assetlist.ts  chain.ts  defaults.ts
client/crypto/: index.ts
client/hooks/: send.ts  types.ts  types.tsx  useAA.tsx  useBalances.tsx  useCreateAA.tsx
client/pages/: _app.tsx  index.tsx
client/types/: index.d.ts
client/utils/: crypto.ts
cmd/mychaind/: main.go
cosmwasm/: Cargo.toml  README.md
cosmwasm/contracts/social-recovery/: Cargo.toml  README.md
cosmwasm/contracts/social-recovery/src/: contract.rs  error.rs  execute.rs  lib.rs  msg.rs  query.rs  state.rs
docs/: localdev.md  run-client.md  run-contracts.md
generated-typings/: LICENSE  README.md  lerna.json
proto/: buf.yaml
testing/: 1-bank-send  1-bank-send-unsigned.json  1-bank-send.json  2-update-key-unsigned.json  2-update-key.json  3-create-acc-unsigned.json  3-create-acc.json  4-store-data-unsigned.json  4-store-data.json  5-store-secret-key-unsigned.json  5-store-secret-key.json  recover-unsigned.json  recover.json  social_recovery.wasm  update-unsigned.json  update.json
(+169 files in other folders)
